--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: /blog
+baseurl: 
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -31,7 +31,7 @@ description: >-                        # used by seo meta and the atom feed
  some stories about physics and my life
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: https://phylosopher07.github.io
+url: https://phylosopher07.github.io/blog
 
 github:
   username: phylosopher07             # change to your github username
